--- a/views/flat.ejs
+++ b/views/flat.ejs
@@ -1,38 +1,52 @@
 <html>
 
 <head>
-  <title>Flat Earth</title>
-  <link rel="stylesheet" href="/stylesheets/style.css"/>
-
-<nav>
-  <div class="nav-wrapper">
-    <a href="/" class="brand-logo">Flat Earth</a>
-     <ul class="right">
-        <li>
-          <a href="/evidence">Evidence</a>
-        </li>
-        <li>
-          <a href="/about">Photos</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</head>
-
-<body>
-  <header>
+ <% include ./partials/header %>
+ </head>
+ <body>
+   <header>
+     <% include ./partials/navbar %>
     <h1 class='center'>Is the Earth Truly Flat?</h1>
-    <h3 class'center'>Mm-hmm Yes</h3>
+    <h3 class'center'>Yup, it is</h3>
   </header>
+  <hr />
   <div class='row'>
-  <div class='col s12 m4'>
-    <h2>Follow the Facts</h2>
-    <ul>
-      <li></li>
-    </ul>
+    <div class='col s12 m4'>
+      <h2>Facts are a feeling</h2>
+        <div class='row'>
+      <div class='col s12 m4'>
+        <h3>Add A Fact!</h3>
+        <form action='/flat' method='post'>
+          <input type='text' name='evidence' placeholder='Fact' />
+          <button class='btn btn-waves' type='submit'>Add</button>
+        </form>
+        </div>
+     </div>
+    </div>
   </div>
-  </div>
-  
+    <table class='table col m8 s12'>
+       <thead>
+         <th>Facts</th>
+         <th>Edit</th>
+         <th>x</th>
+       </thead>
+       <tbody>
+         <% fact.forEach( function(fact) { %>
+          <% var url = "/flat/" + fact.id + "?_method=DELETE" %>
+         <% var editUrl = "/form/" + fact.id + "/edit" %>
+           <tr>
+             <td><%= fact.evidence %></td>
+             <td>
+                <a class="btn" href="<%= editUrl %>">Edit</a>
+             </td>
+             <td> <form method="POST" action="<%= url %>" >
+                 <button class="btn red">Delete</button>
+               </form>
+               </td>
+           </tr>
+         <% }); %>
+       </tbody>
+     </table>
 
 </body>
 
