--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,9 +7,9 @@
       <% include ./partials/navbar %>
     </header>
     <div class="container">
-      <% var url = "/form/" + movie.id + "?_method=PUT" %>
+      <% var url = "/flat/" + fact.id + "?_method=PUT" %>
       <form method="POST" action="<%= url %>" >
-        <input required name="title" value='<%= movie.title %>' />
+        <input required name="evidence" value='<%= fact.evidence %>' />
         <a href="/flat" class="btn red">Cancel</a>
         <button class="btn">Save</button>
      </form>
