style updates and clean up format

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,13 +1,11 @@
 <nav>
   <div class="nav-wrapper">
-    <a href="/" class="brand-logo">Flat Earth</a>
+    <a href="/" class="brand-logo">Flat Earthers are united all around...I mean straight across the world.</a>
     <ul class="right">
       <li>
-        <a href="/evidence">Evidence</a>
+        <a href="/evidence">Documented Evidence</a>
       </li>
-      <li>
-        <a href="/photos">Photos</a>
-      </li>
+
     </ul>
   </div>
 </nav>
